# cookiecutter-pyproject

./: .gitignore  cookiecutter.json  pyproject.toml
{{cookiecutter.project_name}}/: README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.chglog/: config.yml
{{cookiecutter.project_name}}/.github/workflows/: tests.yaml
