[tool.poetry]
name = "cookiecutter-pyproject"
version = "0.1.0"
description = "Cookiecutter template for a Python project."
authors = ["huangkai <h1770360848@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cookiecutter_pyproject"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
